--- a/src/phase1/data/web/runTest.html
+++ b/src/phase1/data/web/runTest.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Test</title>
+    <style>
+        body {
+            background-color: #121212;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        button {
+            background-color: #1f1f1f;
+            color: #ffffff;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #333333;
+        }
+    </style>
 </head>
 <body>
     <h1>Test Sequence Started</h1>
     <p>
-        Test sequence:
+        The lights will activate for one second each in the following order:
         <ul>
             <li>Left turn signal</li>
             <li>Right turn signal</li>
