Add TCU temperature display on web page

--- a/src/phase1/data/web/index.html
+++ b/src/phase1/data/web/index.html
@@ -40,6 +40,7 @@
         Left Turn Signal: {left_turn} <br>
         Right Turn Signal: {right_turn} <br>
         Tail Lights: {tail_lights} <br>
+        TCU Temperature: {tcu_temp} F <br>
         Latest Data Frame: {lin_frame}
     </p>
     <button onclick="location.href='/'">Refresh Data</button>
