--- a/src/phase1/data/web/settings.html
+++ b/src/phase1/data/web/settings.html
@@ -57,25 +57,30 @@
 </head>
 <body>
     <h2>Update Settings</h2>
-    <form action="/update_settings" method="post">
+    <form action="/updateSettings" method="post">
         <label for="wifi_ssid">WiFi SSID:</label>
-        <input type="text" id="wifi_ssid" name="wifi_ssid">
+        <input type="text" id="wifi_ssid" name="wifi_ssid" value="{current_wifi_ssid}">
 
         <label for="wifi_password">WiFi Password:</label>
-        <input type="password" id="wifi_password" name="wifi_password">
+        <input type="password" id="wifi_password" name="wifi_password" value="{current_wifi_password}">
+
+        <label for="wifi_timeout">WiFi Timeout:</label>
+        <input type="number" id="wifi_timeout" name="wifi_timeout" value="{current_wifi_timeout}">
 
         <label for="ap_ssid">Access Point SSID:</label>
-        <input type="text" id="ap_ssid" name="ap_ssid" required>
+        <input type="text" id="ap_ssid" name="ap_ssid" required value="{current_ap_ssid}">
 
         <label for="ap_password">Access Point Password:</label>
-        <input type="password" id="ap_password" name="ap_password" required>
+        <input type="password" id="ap_password" name="ap_password" required value="{current_ap_password}">
 
         <label for="ota_username">OTA Username:</label>
-        <input type="text" id="ota_username" name="ota_username" required>
+        <input type="text" id="ota_username" name="ota_username" required value="{current_ota_username}">
 
-        <label for="ota_password">OTA Password:</label>
-        <input type="password" id="ota_password" name="ota_password" required>
+        <label for="ota_password">New OTA Password:</label>
+        <input type="password" id="ota_password" name="ota_password">
 
+        <label for="ota_password_current">Enter Current OTA Password:</label>
+        <input type="password" id="ota_password_current" name="ota_password_current" required>
         <input type="submit" value="Update Settings">
     </form>
     <button onclick="location.href='/'">Return</button>
