--- a/src/phase1/data/web/index.html
+++ b/src/phase1/data/web/index.html
@@ -50,5 +50,6 @@
     <button onclick="location.href='/settings'">Update Settings</button>
     <button onclick="location.href='/update'">Firmware Update</button>
     <button onclick="location.href='/autoRefresh'">Toggle AutoRefresh</button>
+    <h3>Firmware: {version}</h3>
 </body>
 </html>
