--- a/src/phase1/data/web/control.html
+++ b/src/phase1/data/web/control.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {auto_refresh}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
@@ -37,20 +36,11 @@
     </style>
 </head>
 <body>
-    <h1>Tesla Trailer Control Unit</h1>
-    <h2>Status: {output_status}</h2>
+    <h1>Individual Light Control</h1>
     <h2>{active_lights}</h2>
-    <p>
-        TCU Temperature: {tcu_temp} F <br>
-        Latest Data Frame: {lin_frame}
-    </p>
-    <button onclick="location.href='/'">Refresh Data</button>
-    <button onclick="location.href='/toggleOutput'">Toggle Active</button>
-    <button onclick="location.href='/runTest'">Run Test Sequence</button>
-    <button onclick="location.href='/control'">Manual Control</button>
-    <button onclick="location.href='/settings'">Update Settings</button>
-    <button onclick="location.href='/update'">Firmware Update</button>
-    <button onclick="location.href='/autoRefresh'">Toggle AutoRefresh</button>
-    <h3>Firmware: {version}</h3>
+    <button onclick="location.href='/control?id=2'">Tail Lights</button>
+    <button onclick="location.href='/control?id=0'">Left Signal</button>
+    <button onclick="location.href='/control?id=1'">Right Signal</button>
+    <button onclick="location.href='/'">Return</button>
 </body>
 </html>
